# cpp-template

./: .gitmodules  CMakeLists.txt  Makefile  main  main.cpp
lib/: foo.cpp  upper.cpp
src/: CMakeLists.txt  app.cpp  main.cpp
src/submodule/: private.cpp  public.cpp
src/submodule/inner_submodule/: inner_submodule.cpp
src/test/: test_top.cpp
